<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/overflow"
        android:icon="@drawable/menu"
        android:title=""
        app:showAsAction="always">
        <menu>
            <item
                android:title="@string/resume"
                android:icon="@drawable/resume"
                android:id="@+id/resume"/>
            <item
                android:title="@string/certifications"
                android:icon="@drawable/certs"
                android:id="@+id/certs"/>
            <item
                android:title="@string/projects"
                android:icon="@drawable/portfolio"
                android:id="@+id/projects"/>
            <item
                android:title="@string/services"
                android:icon="@drawable/services"
                android:id="@+id/services"/>
        </menu>
    </item>
</menu>