<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dev6"
    android:alpha="0.8"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/github_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="8dp"
                android:padding="2dp"
                android:src="@drawable/github5"
                app:tint="@drawable/selector" />

            <ImageView
                android:id="@+id/twitter_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="8dp"
                android:padding="2dp"
                android:src="@drawable/twitter2"
                app:tint="@drawable/selector" />

            <ImageView
                android:id="@+id/linkedin_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginRight="12dp"
                android:src="@drawable/linkedin4"
                app:tint="@drawable/selector" />


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_profession"
            android:textColor="@color/orange_500"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/brief_about_me"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/about_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_me"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/button_ripple_bg"
            android:drawableRight="@drawable/arrow_2"/>
    </LinearLayout>
</RelativeLayout>