<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8D8D3"
    tools:context=".Profile">



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E8D8D3">
            <LinearLayout
                android:id="@+id/about_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orange_700"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/about_me"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/detailed_about_me"
                    android:textColor="@color/white"
                    android:textStyle="italic"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/about_description"
                android:background="@drawable/view_bg" />

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_cdv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_description"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_pic" />
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_cdv"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bright Okwu (@Brio)"
                    android:paddingTop="10dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profession"
                    android:textSize="18sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_role"
                    android:textSize="18sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/black"
                    android:paddingTop="10dp"
                    android:gravity="center_horizontal"/>

                <LinearLayout
                    android:id="@+id/skills_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/skills"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="40dp"
                        android:layout_height="3dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@color/orange_700" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Java"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:layout_marginTop="20dp"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/java_indicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:min="65"
                        app:indicatorColor="@color/orange_700"
                        app:trackThickness="8dp"
                        app:trackCornerRadius="10dp"
                        android:indeterminate="false"
                        app:trackColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:text="Kotlin"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/kotlin_indicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:min="50"
                        app:trackThickness="8dp"
                        app:trackCornerRadius="10dp"
                        app:indicatorColor="@color/orange_700"
                        android:indeterminate="false"
                        app:trackColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:text="Git/Github"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/git_indicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:min="85"
                        app:trackThickness="8dp"
                        app:trackCornerRadius="10dp"
                        android:indeterminate="false"
                        app:indicatorColor="@color/orange_700"
                        app:trackColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:paddingLeft="10dp"
                        android:paddingTop="10dp"
                        android:paddingRight="10dp"
                        android:text="XML"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/xml_indicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:min="75"
                        app:indicatorDirectionLinear="leftToRight"
                        app:trackThickness="8dp"
                        app:trackCornerRadius="10dp"
                        android:indeterminate="false"
                        app:indicatorColor="@color/orange_700"
                        app:trackColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>